--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -2,14 +2,20 @@
 <body>
     <h3>All Listings</h3>
 
-    <form method="get" action="/listings/new">
+    <!-- <form method="get" action="/listings/new">  
         <button>Create New Listing</button>
-    </form>
+    </form> -->
 
-    <ul>
+    <div class="row">
      <% for(let listing of allListings){ %>
-     <li><a href="listings/<%= listing._id %>"><%= listing.title %></a></li>
-     <% } %>
-    </ul>
-</body>
-</html>
+    <div class="card" style="width: 20rem;">
+      <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image">
+      <div class="card-body">
+        <p class="card-text"><%= listing.title %> <br> &#8377; <%= listing.price.toLocaleString("on-IN") %> / Night
+        </p>
+      </div>
+    </div>
+    <% } %>
+    </div>
+
+ 
