--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,27 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
-</head>
-<body>
-    <h3>Edit This List</h3>
-    <form method="post" action="/listings/<%= listing._id %>?_method=put"> 
-        <input name="listing[title]" value="<%= listing.title %>" type="text" >
-        <br><br>
-        <textarea name="listing[description]"><%= listing.description %> </textarea>
-        <br><br>
-        <input name="listing[image]" value="<%= listing.image %>" type="text" >
-        <br><br>
-        <input name="listing[price]" value="<%= listing.price %>" type="number" >
-        <br><br>
-        <input name="listing[location]" value="<%= listing.location %>" type="text" >
-        <br><br>
-        <input name="listing[country]" value="<%= listing.country %>" type="text" >
-        <br><br>
+<% layout("/layouts/boilerplate") %>
+<div class="row mt-3">
+    <div class=".col-8 offset-2">
 
-        <button>Edit</button>
+            <h3>Edit This List</h3>
+    <form method="post" action="/listings/<%= listing._id %>?_method=put"> 
+        <div class="mb-3">
+            <label for="title" class="form-lable">Title</label>
+             <input name="listing[title]" value="<%= listing.title %>" type="text" class="form-control">
+        </div>
+       
+        <div class="mb-3">
+             <label for="Description" class="form-lable">Description</label>
+             <textarea name="listing[description]" class="form-control"><%= listing.description %> </textarea>
+        </div>
+        
+        <div class="mb-3">
+             <label for="Image" class="form-lable">Image</label>
+             <input name="listing[image]" value="<%= listing.image %>" type="text" class="form-control">
+       
+        </div>
+
+        <div class="row">
+
+        <div class="mb-3 col-md-4">
+            <label for="Price" class="form-lable">Price</label>
+            <input name="listing[price]" value="<%= listing.price %>" type="number" class="form-control">
+        </div>
+
+        <div class="mb-3 col-md-8">
+        <label for="Country" class="form-lable">Country</label>
+          <input name="listing[country]" value="<%= listing.country %>" type="text" class="form-control">
+       </div>
+
+       </div>
+        
+        
+        <div class="mb-3">
+            <label for="Location" class="form-lable">Location</label>
+             <input name="listing[location]" value="<%= listing.location %>" type="text" class="form-control">
+        </div>
+    
+       
+       
+
+
+        <button class="btn btn-dark edit-btn mt-3">Edit</button>
     </form>
-</body>
-</html>
+        
+    </div>
+
+</div>
+
+
