--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,27 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
-</head>
+<% layout("/layouts/boilerplate") %>
+<div class="row mt-3">
+    <div class="col-8 offset-2">
+        <br><br>
 <body>
     <h3>Create New Listing</h3>
     <form method="post" action="/listings"> 
-        <input name="listing[title]" placeholder="Enter Title" type="text" >
-        <br><br>
-        <textarea name="listing[description]" placeholder="Enter Description" type="text" > </textarea>
-        <br><br>
-        <input name="listing[image]" placeholder="Enter Image URL/Link" type="text" >
-        <br><br>
-        <input name="listing[price]" placeholder="Enter Price" type="number" >
-        <br><br>
-        <input name="listing[location]" placeholder="Enter Location" type="text" >
-        <br><br>
-        <input name="listing[country]" placeholder="Enter Country" type="text" >
-        <br><br>
+        <div class="mb-3">
+           <label for="title" class="form-lable">Title</label>
+           <input name="listing[title]" placeholder="Add a catchy title" type="text" class="form-control">
+        </div>
 
-        <button>Add</button>
+        <div class="mb-3">
+            <label for="title" class="form-lable">Description</label>
+            <textarea name="listing[description]" placeholder="Enter Description" type="text" class="form-control" > </textarea>
+        </div>
+
+        <div class="mb-3">
+            <label for="image" class="form-lable">Image Link</label>
+             <input name="listing[image]" placeholder="Image URL" type="text" class="form-control">
+        </div>
+
+        <div class="row">
+            <div class="mb-3 col-4 mid">
+            <label for="title" class="form-lable">Price</label>
+            <input name="listing[price]" placeholder="1200" type="number" class="form-control">
+            </div>
+
+            <div class="mb-3 col-8 mid">
+            <label for="title" class="form-lable">Country</label>
+            <input name="listing[country]" placeholder="Pune Maharastra" type="text" class="form-control">
+        </div>
+        </div>
+
+        
+        
+
+        <div class="mb-3">
+            <label for="title" class="form-lable">Location</label>
+             <input name="listing[location]" placeholder="India" type="text" class="form-control">
+        </div>
+       
+       
+
+        <button class="btn btn-dark add-btn mt-3" >Add</button>
+        <br><br>
     </form>
-</body>
-</html>
+    </div>
+</div>
