--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,3 +90,8 @@
     background-color: #fe424d !important;
     border: none !important;
 }
+
+.show-img {
+    height: 30vh;
+    object-fit: cover;
+}
