--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,20 +1,30 @@
 <% layout("/layouts/boilerplate") %>
-<body>
-    <h3>Listing Details : </h3>
-    <ul>
-        <li> <%= listing.title %> </li>
-        <li> <%= listing.description %> </li>
-        <li>&#8377; <%= listing.price.toLocaleString("en-IN") %> </li>
-        <li> <%= listing.location %> </li>
-        <li> <%= listing.country %> </li>
-    </ul>
-    <br>
-    <a href="/listings/<%= listing._id %>/edit" >Edit This List</a>
 
-    <br><br>
+<div class="row mt-3">
+    <div class="col-8 offset-2 text-center">
+        <h3>Listing Details :</h3>
+    </div>
 
-    <form method="post" action="/listings/<%= listing._id %>?_method=Delete">
-        <button>Delete This List</button>
-    </form>
-</body>
-</html>
+    <div class="col-12 d-flex justify-content-center mt-3">
+        <div class="card" style="width: 28rem;"> <!-- wider card -->
+            <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
+            <div class="card-body text-center">
+                <p class="card-text">
+                    <b><%= listing.title %></b><br>
+                    <%= listing.title %><br>
+                    <%= listing.description %><br>
+                    &#8377; <%= listing.price.toLocaleString("en-IN") %><br>
+                    <%= listing.location %><br>
+                    <%= listing.country %>
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-12 text-center mt-3">
+        <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark edit-btn">Edit</a>
+        <form method="post" action="/listings/<%= listing._id %>?_method=Delete" class="d-inline">
+            <button class="btn btn-dark">Delete</button>
+        </form>
+    </div>
+</div>
